--- a/hackerrank-hs.cabal
+++ b/hackerrank-hs.cabal
@@ -4,9 +4,9 @@ cabal-version: >=1.10
 build-type: Simple
 license: BSD3
 license-file: LICENSE
-copyright: 2017 Author name here
+copyright: 2017 arsani
 maintainer: example@example.com
-homepage: https://github.com/githubuser/hackerrank-hs#readme
+homepage: https://github.com/arsaniwilliam/hackerrank-hs#readme
 category: Web
 author: Author name here
 extra-source-files:
@@ -22,9 +22,15 @@ library
     build-depends:
         base >=4.7 && <5,
         text -any,
-        MisssingH -any
+        split -any,
+        matrix -any
     default-language: Haskell2010
     hs-source-dirs: src
+    other-modules:
+        FilterElements
+        MatrixRotation
+        PolygonArea
+        PolygonPerimiter
 
 executable hackerrank-hs-exe
     main-is: Main.hs
